refactor: change Page model name